Issue ED-576: 91 number not aligned properly in the text box while updating add mobile number in the profile page

--- a/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.scss
@@ -31,6 +31,7 @@
 .ui.left.icon.input .icon {
   font-size: 1rem;
   font-family: inherit;
+  margin-top: 0.125rem !important;
 }
 
 .height-200 {
